src/snapshots/component_arrow_function.snap
---
source: src/codemod.rs
description: "\nexport default () => {\n  return <div>hello</div>;\n}\n        "
expression: "codemod(input, source_type).unwrap()"
---
        
export default defineRoute({
  Component() {
    return <div>hello</div>;
  },
});
