src/snapshots/component_arrow_function_expression.snap
---
source: src/codemod.rs
description: "\nexport default () => <div>hello</div>;\n        "
expression: "codemod(input, source_type).unwrap()"
---
        
export default defineRoute({
});
