src/snapshots/component_function_named.snap
---
source: src/codemod.rs
description: "export default function Route() {\n  return <div>hello</div>;\n}\n"
expression: "codemod(input, source_type).unwrap()"
---
export default defineRoute({
  Component() {
    return <div>hello</div>;
  },
});
