src/snapshots/component_loader_binding_assignment.snap
---
source: src/codemod.rs
description: "import { useLoaderData } from \"@remix-run/react\";\n\nexport function loader() {\n  return { hello: \"world\", foo: \"bar\" };\n}\n\nexport default function() {\n  const { hello, maybe = \"not\" } = useLoaderData<typeof loader>();\n  return <h1>{hello}</h1>;\n}\n"
expression: "codemod(&input, source_type).unwrap()"
---
import { useLoaderData } from "@remix-run/react";





export default defineRoute({
  serverLoader() {
    return { hello: "world", foo: "bar" };
  },
  Component({ loaderData: { hello, maybe = "not" } }) {
    
    return <h1>{hello}</h1>;
  },
});
