src/snapshots/component_loader_binding_identifier_rest.snap
---
source: src/codemod.rs
description: "import { useLoaderData } from \"@remix-run/react\";\n\nexport function loader() {\n  return { hello: \"world\", foo: \"bar\" };\n}\n\nexport default function() {\n  const { hello, ...rest } = useLoaderData<typeof loader>();\n  return <h1>{hello}</h1>;\n}\n"
expression: "codemod(&input, source_type).unwrap()"
---
import { useLoaderData } from "@remix-run/react";





export default defineRoute({
  serverLoader() {
    return { hello: "world", foo: "bar" };
  },
  Component({ data: { hello, ...rest } }) {
    
    return <h1>{hello}</h1>;
  },
});
