src/snapshots/loader_arrow_function_args.snap
---
source: src/codemod.rs
description: "\nimport type { LoaderFunctionArgs } from \"@remix-run/node\";\n\nexport const loader = ({ params, context, request, response }: LoaderFunctionArgs) => {\n  return { hello: \"world\" };\n}\n        "
expression: "codemod(input, source_type).unwrap()"
---
import type { LoaderFunctionArgs } from "@remix-run/node";


        
export default defineRoute({
  loader({ params, context, request, response }: LoaderFunctionArgs) {
    return { hello: "world" };
  },
});
