src/snapshots/loader_arrow_function_expression.snap
---
source: src/codemod.rs
description: "export const loader = () => ({ hello: \"world\" });\n"
expression: "codemod(&input, source_type).unwrap()"
---
export default defineRoute({
  serverLoader: () => ({ hello: "world" }),
});
