src/snapshots/loader_arrow_function_expression_async.snap
---
source: src/codemod.rs
description: "\nexport const loader = async () => ({ hello: \"world\" });\n        "
expression: "codemod(input, source_type).unwrap()"
---
        
export default defineRoute({
  loader: async () => ({ hello: "world" }),
});
